--- a/DemoView/app/build.gradle
+++ b/DemoView/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.jude:rollviewpager:1.3.2'
+    compile 'me.grantland:autofittextview:0.2.+'
 }
