--- a/DemoRecyclerView/app/src/main/AndroidManifest.xml
+++ b/DemoRecyclerView/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".gank.view.WelfareActivity"></activity>
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
